# OurStory

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: deploy-server.yml  deploy-wasm-client.yml  deploy-wz-server.yml
crates/client/: Cargo.toml  index.html
crates/client/src/: input.rs  layer.rs  main.rs  physics.rs  picking.rs  wz.rs  wz_asset_loader.rs
crates/client/src/animation/: mod.rs
crates/client/src/camera/: mod.rs  resources.rs  systems.rs
crates/client/src/character/: components.rs  events.rs  job.rs  loader.rs  mod.rs  skill_loader.rs  skills.rs  stance.rs  systems.rs  types.rs  weapon_stances.rs
crates/client/src/character/systems/: animation.rs  input.rs  mod.rs
crates/client/src/map/: asset_loader.rs  components.rs  events.rs  mod.rs  resources.rs  systems.rs
crates/client/src/mob/: animation.rs  asset.rs  events.rs  mod.rs
crates/client/src/npc/: animation.rs  asset.rs  events.rs  mod.rs
crates/client/src/ui/: components.rs  loader.rs  loading.rs  mod.rs
crates/client/src/ui/screens/: login.rs  logo.rs  mod.rs
crates/client/src/ui/windows/: hud.rs  mod.rs  stat.rs
crates/client/src/wz/: asset_loader.rs  asset_loaders.rs  asset_source.rs  button_asset.rs  foothold.rs  frames.rs  map.rs  mod.rs
crates/protocol/src/: lib.rs  opcodes.rs  packets.rs  types.rs
crates/server/: Cargo.toml
crates/server-core/: Cargo.toml
crates/server-core/migrations/: 0001_init.sql  20250101000001_initial.sql
crates/server-core/src/: lib.rs  login.rs  player.rs
crates/server-core/src/channel/: mod.rs  routing.rs
crates/server-core/src/db/: mod.rs  models.rs  postgres.rs
crates/server-core/src/map/: instance.rs  mod.rs  snapshot.rs
crates/server-core/src/quest/: README.md  dialog.rs  eval.rs  loader.rs  mod.rs  types.rs
crates/server-core/src/world/: mod.rs
crates/server/docs/: README.md  database.md  dispatcher.md  networking.md  packet-flow.md
crates/server/src/: config.rs  events.rs  main.rs
crates/server/src/handlers/: character.rs  login.rs  mod.rs  movement.rs
crates/server/src/net/: channel.rs  codec.rs  dispatcher.rs  listener.rs  login.rs  map.rs  mod.rs  session.rs  world.rs
crates/wz/: AGENTS.md  Cargo.toml
crates/wz-cli/: AGENTS.md  Cargo.toml
crates/wz-cli/src/: lib.rs  main.rs
crates/wz-derive/: Cargo.toml
crates/wz-derive/src/: lib.rs
crates/wz-server/: Cargo.toml  TODO.md  index.html
crates/wz-server/src/: main.rs  search.rs
crates/wz/src/: error.rs  json_node.rs  lib.rs  main.rs  node.rs  node_trait.rs  source.rs  vector2d.rs
crates/wz/src/data/: character.rs  common.rs  equip.rs  map.rs  mob.rs  mod.rs  npc.rs  physics.rs  quest.rs  skill.rs
crates/wz/src/source/: source_wasm.rs
deployment/: README.md  nginx.conf  wz-server.service
docs/: build-performance.md
scripts/: deploy-dev.sh  run-wasm.sh  worktree-add
src/: wz.rs  wz_asset_loader.rs
