[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0-rc.2", features = ["bevy_dev_tools", "dynamic_linking", "bevy_remote"] }
wz = { path = "../wz" }
wz_reader = "0.0.20"
image = "0.25.10"
indexmap = "2.14.0"
thiserror = "2.0.18"
clap = { version = "4", features = ["derive"] }

[features]
default = ["map", "mob", "npc", "character"]
character = []
map = []
mob = []
npc = []
ui = []
