[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["bevy_dev_tools", "bevy_remote"] }
bevy-inspector-egui = { git = "https://github.com/taboky-dev/bevy-inspector-egui", rev = "873c32b", optional = true }
wz = { path = "../wz" }
image = "0.25.10"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
indexmap = "2.14.0"
thiserror = "2.0.18"
clap = { version = "4", features = ["derive"] }

[features]
default = ["map", "mob", "npc", "character", "inspector", "ui"]
character = []
map = []
mob = []
npc = []
ui = []
inspector = ["bevy-inspector-egui"]
