[package]
name = "server-core"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
wz-cli = { path = "../wz-cli" }
wz_reader = { version = "0.0.20", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
dashmap = "6"
tracing = "0.1"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "migrate"] }
