[package]
name = "wz-server"
version = "0.1.0"
edition = "2024"

[dependencies]
wz = { path = "../wz" }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
