[package]
name = "wz"
version = "0.1.0"
edition = "2024"

[dependencies]
wz_reader = "0.0.20"
image = { version = "0.25.10", optional = true }
indexmap = "2.14.0"
thiserror = "2.0.18"
lru = "0.13"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["image-data"]
image-data = ["image"]
