[package]
name = "wz"
version = "0.1.0"
edition = "2024"

[dependencies]
wz_reader = { version = "0.0.20", default-features = false, features = ["json"] }
image = { version = "0.25.10", optional = true, default-features = false, features = ["png"] }
indexmap = "2.14.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2.0.18"
lru = "0.13"
log = "0.4"
hashbrown = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Request", "RequestInit", "Response", "Headers"] }
js-sys = "0.3"

[features]
default = ["image-data"]
image-data = ["image"]
